[package]
name = "contract"
version = "1.0.0"
authors = ["Thanh Tu <tu@orai.io>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1.8" }
cosmwasm-storage = { version = "1.1.8", default-features = false, features = []  }
cosmwasm-schema = "1.1.8"